--- a/about.html
+++ b/about.html
@@ -39,9 +39,15 @@
             </div>
 
             <div class="team-member">
-                <img src="kaelan-benedict.jpg" alt="Kaelan Benedict">
-                <h4>Kaelan Benedict</h4>
-                <p><strong>Deputy Director</strong><br>Kaelan oversees training, incident response coordination, and leads the development of community preparedness initiatives.</p>
+                <img src="david-east.jpg" alt="David East">
+                <h4>David East</h4>
+                <p><strong>Deputy Director</strong><br>David plays a central role in logistics and infrastructure coordination, supporting operational continuity and field deployment strategies.</p>
+            </div>
+
+            <div class="team-member">
+                <img src="russ-clark.jpg" alt="Russ Clark">
+                <h4>Russ Clark</h4>
+                <p><strong>Deputy Director</strong><br>Russ supports emergency planning, volunteer coordination, and serves as liaison for regional agency collaborations.</p>
             </div>
 
             <div class="team-member">
@@ -50,7 +56,19 @@
                 <p><strong>Deputy Director</strong><br>Dustin plays a key role in emergency operations and planning, ensuring field readiness and assisting in interagency collaboration during events.</p>
             </div>
 
-          <div class="team-member">
+            <div class="team-member">
+                <img src="daniel-napier.jpg" alt="Daniel Napier">
+                <h4>Daniel Napier</h4>
+                <p><strong>Deputy Director</strong><br>Daniel contributes expertise in emergency response systems, resource management, and situational coordination during incidents.</p>
+            </div>
+
+            <div class="team-member">
+                <img src="kaelan-benedict.jpg" alt="Kaelan Benedict">
+                <h4>Kaelan Benedict</h4>
+                <p><strong>Deputy Director</strong><br>Kaelan oversees training, incident response coordination, and leads the development of community preparedness initiatives.</p>
+            </div>
+
+            <div class="team-member">
                 <img src="peyton-keene.jpg" alt="Peyton Keene">
                 <h4>Peyton Keene</h4>
                 <p><strong>Deputy Director</strong><br>Peyton manages day-to-day operations and assists with logistics, public communications, and emergency planning for major incidents.</p>
