--- a/about.html
+++ b/about.html
@@ -33,19 +33,19 @@
             <h3>Our Leadership Team</h3>
 
             <div class="team-member">
-                <img src="wanda-shelton.jpg" alt="Wanda Shelton">
+                <img src="Wanda-Shelton.jpg" alt="Wanda Shelton">
                 <h4>Wanda Shelton</h4>
                 <p><strong>Director</strong><br>Wanda leads the EMA with decades of experience in public service and emergency response coordination. She oversees strategic planning, interagency collaboration, and disaster recovery operations.</p>
             </div>
 
             <div class="team-member">
-                <img src="david-east.jpg" alt="David East">
+                <img src="David-East.jpg" alt="David East">
                 <h4>David East</h4>
                 <p><strong>Deputy Director</strong><br>David plays a central role in logistics and infrastructure coordination, supporting operational continuity and field deployment strategies.</p>
             </div>
 
             <div class="team-member">
-                <img src="russ-clark.jpg" alt="Russ Clark">
+                <img src="Russ-Clark.jpg" alt="Russ Clark">
                 <h4>Russ Clark</h4>
                 <p><strong>Deputy Director</strong><br>Russ supports emergency planning, volunteer coordination, and serves as liaison for regional agency collaborations.</p>
             </div>
@@ -57,19 +57,19 @@
             </div>
 
             <div class="team-member">
-                <img src="daniel-napier.jpg" alt="Daniel Napier">
+                <img src="Daniel-Napier.jpg" alt="Daniel Napier">
                 <h4>Daniel Napier</h4>
                 <p><strong>Deputy Director</strong><br>Daniel contributes expertise in emergency response systems, resource management, and situational coordination during incidents.</p>
             </div>
 
             <div class="team-member">
-                <img src="kaelan-benedict.jpg" alt="Kaelan Benedict">
+                <img src="Kaelan-Benedict.jpg" alt="Kaelan Benedict">
                 <h4>Kaelan Benedict</h4>
                 <p><strong>Deputy Director</strong><br>Kaelan oversees training, incident response coordination, and leads the development of community preparedness initiatives.</p>
             </div>
 
             <div class="team-member">
-                <img src="peyton-keene.jpg" alt="Peyton Keene">
+                <img src="Peyton-Keene.jpg" alt="Peyton Keene">
                 <h4>Peyton Keene</h4>
                 <p><strong>Deputy Director</strong><br>Peyton manages day-to-day operations and assists with logistics, public communications, and emergency planning for major incidents.</p>
             </div>
