--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="team-member">
-                <img src="dustin-price.jpg" alt="Dustin Price">
+                <img src="Dustin-Price.jpg" alt="Dustin Price">
                 <h4>Dustin Price</h4>
                 <p><strong>Deputy Director</strong><br>Dustin plays a key role in emergency operations and planning, ensuring field readiness and assisting in interagency collaboration during events.</p>
             </div>
