--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             <div class="team-member">
                 <img src="Peyton-Keene.jpg" alt="Peyton Keene">
                 <h4>Peyton Keene</h4>
-                <p><strong>Deputy Director</strong><br>Peyton manages day-to-day operations and assists with logistics, public communications, and emergency planning for major incidents.</p>
+                <p><strong>Deputy Director</strong><br>Peyton assists with logistics, public communications, and emergency planning for major incidents.</p>
             </div>
         </section>
     </main>
