--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="team-member">
-                <img src="Peyton-Keene.jpg" alt="Peyton Keene">
+                <img src="Peyton-Keene.png" alt="Peyton Keene">
                 <h4>Peyton Keene</h4>
                 <p><strong>Deputy Director</strong><br>Peyton assists with logistics, public communications, and emergency planning for major incidents.</p>
             </div>
