--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="index.html#alerts">Alerts</a></li>
+                    <li><a href="alerts.html">Alerts</a></li>
                     <li><a href="index.html#resources">Resources</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
