--- a/alerts.html
+++ b/alerts.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emergency Alerts - Garrard County EMA</title>
   <link rel="stylesheet" href="styles.css">
-  <script defer src="scripts.js"></script>
+  <script defer src="script.js"></script>
 </head>
 
 <body>
